Change app title

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#ee7398" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="BAKA Pink Road"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>CUTUBALL</title>
+    <title>BAKA Pink Road</title>
   </head>
   <body>
     <div id="root"></div>
