--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://fonts.googleapis.com/css?family=Prompt:200,300,400,500,600,700&display=swap" rel="stylesheet">
     <title>BAKA Pink Road</title>
   </head>
   <body>
