--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
     <title>BAKA Pink Road</title>
   </head>
   <body>
+    <div id="background">
+      <div></div>
+    </div>
     <div id="root"></div>
   </body>
 </html>
