--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
     <meta
       name="description"
       content="เว็บไซต์ลงทะเบียนขึ้นแสตนด์เชียร์ฝั่งจุฬาฯ งานฟุตบอลประเพณีจุฬาฯ - ธรรมศาสตร์ ครั้งที่ 74 "
-    />
+      />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css?family=Prompt:200,300,400,500,600,700&display=swap" rel="stylesheet">
